DAY14-Arrays/Host/.metadata/.plugins/org.eclipse.cdt.ui/example1.build.log
11:57:46 **** Incremental Build of configuration Debug for project example1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:8:17: error: array size missing in 'myNumbers'
    8 |         uint8_t myNumbers[];
      |                 ^~~~~~~~~

11:57:46 Build Failed. 1 errors, 0 warnings. (took 262ms)

